--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -58,6 +58,7 @@
   "C_Cpp_Runner.msvcSecureNoWarnings": false,
   "files.associations": {
     "client_operations.h": "c",
-    "system_error": "c"
+    "system_error": "c",
+    "storage_handler.h": "c"
   }
 }
